# NAStreaming

./: .gitignore  package.json  test.html
backend/: .env  Cargo.toml
backend/migrations/2022-05-24-180054_create_movies/: up.sql
backend/migrations/2022-05-25-084030_create_movie_relationships/: down.sql  up.sql
backend/migrations/2022-05-25-084052_create_movie_filelocations/: down.sql  up.sql
backend/migrations/2022-05-25-084105_create_movie_progress/: down.sql  up.sql
backend/migrations/2022-05-25-084115_create_movie_watchtime/: down.sql  up.sql
backend/migrations/2022-07-07-093716_create_movie_detail/: down.sql  up.sql
backend/migrations/2022-07-08-155547_create_movie_categories/: down.sql  up.sql
backend/src/: errors.rs  handle_field.rs  main.rs  models.rs  mysql.rs  schema.rs  services.rs
backend/src/api/: mod.rs  movie_db.rs  movie_info_db.rs  movie_info_edit.rs  movie_loc_db.rs  movie_progress.rs  test.rs
backend/src/models/: mod.rs  movie_detail.rs  movie_location.rs  movie_progress.rs  movie_watchtime.rs  movies.rs
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: tools.ts  urls.ts
frontend/src/components/add/: AddMovie.svelte  PlusButton.svelte  TagInput.svelte  TextInput.svelte  addmovie.scss  createMovie.ts  inputs.scss  inputtags.scss  inputtext.scss  (+3 more)
frontend/src/routes/: __error.svelte  __layout.svelte  add.svelte  categories.svelte  discover.svelte  index.svelte  settings.svelte  sign-in.svelte  watchlist.svelte
frontend/static/: style.css
(+97 files in other folders)
