[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "4"
actix-cors = "0.6.1"
actix-multipart = "0.4.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
anyhow = "1.0.57"
env_logger = "0.9.0"
serde = { version = "1.0", features= ["derive"]}
futures-util = "0.3.21"
uuid = { version = "0.4", features = ["serde", "v4"] }
